--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ body.custom-background { background-color: #71cec9; }
 
 	</head>
 
-	<body class="home page-template-default page page-id-6 custom-background wp-embed-responsive singular enable-search-modal has-post-thumbnail has-no-pagination not-showing-comments show-avatars footer-top-visible">
+	<body class="home page-template-default page page-id-6 page-parent custom-background wp-embed-responsive singular enable-search-modal has-post-thumbnail has-no-pagination not-showing-comments show-avatars footer-top-visible">
 
 		<a class="skip-link screen-reader-text" href="#site-content">Skip to the content</a>
 		<header id="site-header" class="header-footer-group" role="banner">
@@ -605,7 +605,7 @@ body.custom-background { background-color: #71cec9; }
 
 								<li id="menu-item-15" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-15"><a href="https://pvphype.github.io/gtfofficial/" aria-current="page">Kezdőlap</a></li>
 <li id="menu-item-17" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a href="https://pvphype.github.io/gtfofficial/hirek/">Hírek</a></li>
-<li id="menu-item-16" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><a href="https://pvphype.github.io/gtfofficial/rolunk/">Stream</a></li>
+<li id="menu-item-16" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><a href="https://pvphype.github.io/gtfofficial/the-new-umoma-opens-its-doors-2/rolunk/">Stream</a></li>
 <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><a href="https://pvphype.github.io/gtfofficial/kozosegszabaly/">Közösségi Szabályzat</a></li>
 <li id="menu-item-127" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-127"><a href="https://pvphype.github.io/gtfofficial/category/egyeb/">Profil Beálítások</a><span class="icon"></span>
 <ul class="sub-menu">
@@ -693,7 +693,7 @@ body.custom-background { background-color: #71cec9; }
 
 						<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-15"><div class="ancestor-wrapper"><a href="https://pvphype.github.io/gtfofficial/" aria-current="page">Kezdőlap</a></div><!-- .ancestor-wrapper --></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><div class="ancestor-wrapper"><a href="https://pvphype.github.io/gtfofficial/hirek/">Hírek</a></div><!-- .ancestor-wrapper --></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><div class="ancestor-wrapper"><a href="https://pvphype.github.io/gtfofficial/rolunk/">Stream</a></div><!-- .ancestor-wrapper --></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16"><div class="ancestor-wrapper"><a href="https://pvphype.github.io/gtfofficial/the-new-umoma-opens-its-doors-2/rolunk/">Stream</a></div><!-- .ancestor-wrapper --></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-18"><div class="ancestor-wrapper"><a href="https://pvphype.github.io/gtfofficial/kozosegszabaly/">Közösségi Szabályzat</a></div><!-- .ancestor-wrapper --></li>
 <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-127"><div class="ancestor-wrapper"><a href="https://pvphype.github.io/gtfofficial/category/egyeb/">Profil Beálítások</a><button class="toggle sub-menu-toggle fill-children-current-color" data-toggle-target=".menu-modal .menu-item-127 > .sub-menu" data-toggle-type="slidetoggle" data-toggle-duration="250" aria-expanded="false"><span class="screen-reader-text">Show sub menu</span><svg class="svg-icon" aria-hidden="true" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="12" viewBox="0 0 20 12"><polygon fill="" fill-rule="evenodd" points="1319.899 365.778 1327.678 358 1329.799 360.121 1319.899 370.021 1310 360.121 1312.121 358" transform="translate(-1310 -358)" /></svg></button></div><!-- .ancestor-wrapper -->
 <ul class="sub-menu">
